[package]
name = "rres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
drm = { git = "https://github.com/Smithay/drm-rs" }
eyre = "0.6"
lexopt = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
