[package]
name = "rres"
version = "0.1.1"
edition = "2021"
authors = ["rokbma <uffdsq@protonmail.com>"]
description = "A xrandr replacement to gather display resolutions"
repository = "https://github.com/rokbma/rres"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
drm = "0.6"
eyre = "0.6"
lexopt = "0.2"
log = "0.4"

[dependencies.simple_logger]
version = "1.15"
default-features = false
features = ["stderr", "colors"]
